--- a/src/app/factura/factura-detail/factura-detail.component.html
+++ b/src/app/factura/factura-detail/factura-detail.component.html
@@ -1,15 +1,79 @@
-<div class="panel-body">
-    <div class="border margin">
-        <p style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="h3 p-3">{{facturaDetail.numero}}<p> 
-        <div class="row">
-            <div class="col">
-                <dl>  
-                    <dt style="background-color:rgb(247, 247, 247); text-align: center">Precio</dt>
-                    <dd style="background-color:rgb(247, 247, 247); text-align: center">{{facturaDetail.precio}}</dd>
 
-                </dl>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<div class="container">
+    <div class="row">
+        <div class="well col-xs-10 col-sm-10 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                    <address>
+                        <strong>Picty inc</strong>
+                        <br>
+                        Universidad de los Andes, Bogota
+                        <br>
+                        <abbr title="Phone">P:</abbr> (320) 275-1899
+                    </address>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6 text-right">
+                    <p>
+                        <em>Fecha: {{facturaDetail.fechaCompra}}</em>
+                    </p>
+                    <p>
+                        <em>Receipt #: {{facturaDetail.numero}}</em>
+                    </p>
+                </div>
             </div>
-  
+            <div class="row">
+                <div class="text-center">
+                    <h1>Recibo</h1>
+                </div>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Product</th>
+                            <th>Fecha</th>
+                            <th class="text-center">Precio</th>
+                            <th class="text-center">Unidades</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-md-9"><em>Foto</em></td>
+                            <td class="col-md-1" style="text-align: center"> {{facturaDetail.fechaCompra}} </td>
+                            <td class="col-md-1 text-center">${{facturaDetail.precio}}</td>
+                            <td class="col-md-1 text-center">1</td>
+                        </tr>
+                        <tr>
+                            <td>   </td>
+                            <td>   </td>
+                            <td class="text-right">
+                            <p>
+                                <strong>Subtotal: </strong>
+                            </p>
+                            <p>
+                                <strong>Impuestos (17%): </strong>
+                            </p></td>
+                            <td class="text-center">
+                            <p>
+                                <strong>${{facturaDetail.precio}}</strong>
+                            </p>
+                            <p>
+                                <strong>${{facturaDetail.precio * 0.17}}</strong>
+                            </p></td>
+                        </tr>
+                        <tr>
+                            <td>   </td>
+                            <td>   </td>
+                            <td class="text-right"><h4><strong>Total: </strong></h4></td>
+                            <td class="text-center text-danger"><h4><strong>${{facturaDetail.precio * 0.17 + facturaDetail.precio}}</strong></h4></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-success btn-lg btn-block">
+                    Pay Now   <span class="glyphicon glyphicon-chevron-right"></span>
+                </button>
+            </div>
         </div>
     </div>
-  </div>
