--- a/src/app/photo/photo-list/photo-list.component.html
+++ b/src/app/photo/photo-list/photo-list.component.html
@@ -29,6 +29,7 @@
         <div class="grid__overlay">
             <button class="viewbutton" routerLink="/photos/{{photo.id}}">View</button>
             <button class="viewbutton" (click)="showHideEdit(photo.id)">Edit</button>
+            <button class="viewbutton" routerLink="/facturas/comprar{{photo.id}}">Comprar</button>
         </div>
     </div>
 </section>
