--- a/src/app/factura/factura-list/factura-list.component.html
+++ b/src/app/factura/factura-list/factura-list.component.html
@@ -33,7 +33,7 @@
         <tbody>
           <tr *ngFor = "let factura of facturas">
               <td style="cursor: pointer;"> 
-                  <dd style="text-align: center;" routerLink="/facturas/{{factura.id}}" >{{factura.number}}</dd>
+                  <dd style="text-align: center;" routerLink="/facturas/{{factura.id}}" >{{factura.numero}}</dd>
               </td>
               <td>
                   <button class="btn btn-primary" (click)="showHideEdit(factura.id)"><span class="fa fa-pencil"></span></button>
