ronda y organizador completos

--- a/src/app/organizador/organizador-detail/organizador-detail.component.html
+++ b/src/app/organizador/organizador-detail/organizador-detail.component.html
@@ -10,6 +10,8 @@
                   <dd>{{organizadorDetail.telefono}}</dd>
                   <dt>Pais</dt>
                   <dd>{{organizadorDetail.pais}}</dd>
+                  <dt>Concursos</dt>
+                  <dd>Blanco y Negro</dd>
               </dl>
           </div>
   </div>
