--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
    
     <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
                 <a class="navbar-brand" href="#">
                     <div class="form-inline">
                         <img class="img-fluid" alt="Responsive image" height="200" width="310" src="https://i.imgur.com/lK1qsS2.jpg">
@@ -19,7 +20,10 @@
                 &nbsp;
                 &nbsp;
 
-                <li><a id="fotografo-navbar-item" routerLink="/fotografos/list">Fotografos</a></li>  
+                <li><a id="fotografo-navbar-item" routerLink="/fotografos/list"><span class="fas fa-camera"></span>Fotografos</a></li>  
+                &nbsp;
+                &nbsp;
+                <li><a id="interes-fotografico-navbar-item" routerLink="/interesFotograficos/list"><span class="far fa-thumbs-up"></span> Intereses Fotograficos</a></li>  
                 &nbsp;
                 &nbsp;
 
