--- a/src/app/fotografo/fotografo-create/fotografo-create.component.html
+++ b/src/app/fotografo/fotografo-create/fotografo-create.component.html
@@ -2,7 +2,7 @@
     <div class="col-3"></div>
     <div class="col-6">
         <br>
-        <h2 class="text-center">Crear Fotografo</h2>
+        <h2 class="text-center">Crear mi perfil</h2>
         <br>
         <form name="fotografo" (ngSubmit)="f.form.valid && createFotografo()" #f="ngForm" novalidate>
             <div class="form-group">
@@ -68,7 +68,7 @@
                               <input type="password" name="fotografoPassword" class="form-control" id="fotografoPassword" [(ngModel)]="fotografo.password"
                                   #fotografoPassword="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fotografoPassword.invalid }" required>
                               <div class="invalid-feedback">
-                                  <div>The fotografo's login is missing</div>
+                                  <div>The fotografo's password is missing</div>
                               </div>
                             </div>
                             <div class= "form-group">
@@ -79,6 +79,14 @@
                                     <div>The fotografo's login is missing</div>
                                 </div>
                               </div>
+                              <div class= "form-group">
+                                  <label for="fotografoFoto"><b>Foto</b></label>
+                                  <input type="foto" name="fotografoFoto" class="form-control" id="fotografoFoto" [(ngModel)]="fotografo.foto"
+                                      #fotografoFoto="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fotografoFoto.invalid }" required>
+                                  <div class="invalid-feedback">
+                                      <div>The fotografo's foto is missing</div>
+                                  </div>
+                                </div>
 
 
            
