alguien cambio la libreria de iconos

--- a/src/app/concurso/concurso-list/concurso-list.component.html
+++ b/src/app/concurso/concurso-list/concurso-list.component.html
@@ -9,7 +9,7 @@
             <tbody>
                 <tr *ngFor = "let concurso of concursos">
                     <td> <dd class="figure-caption" routerLink="/concursos/{{concurso.id}}"  > {{concurso.tema}}</dd> </td>
-                    <td><button class="btn btn-primary" (click)="showHideEdit(concurso.id)"><span class="fa fa-pencil"></span></button></td>
+                    <td><button class="btn btn-primary" (click)="showHideEdit(concurso.id)"><span class="far fa-edit"></span></button></td>
             </tr>
             </tbody>
             <br>
