--- a/src/app/cliente/cliente-list/cliente-list.component.html
+++ b/src/app/cliente/cliente-list/cliente-list.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="row">
   <div class="container-fluid col-5">
       
@@ -21,9 +23,8 @@
   </div>
   
   <div class="container-fluid col-7">
-    <div *ngIf="selected">
-        <app-cliente-detail [clienteDetail]="selected"></app-cliente-detail>
+    <div *ngIf="clienteDetail">
+        <app-cliente-detail [clienteDetail]="clienteDetail"></app-cliente-detail>
       </div>
   </div>
   </div>
-  
