--- a/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.html
@@ -5,7 +5,7 @@
       <br>
       <div class="row justify-content-center align-self-center">
         <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
-            (click)="showHideCreate()">Crear mi perfil</button>
+            (click)="showHideCreate()">Crear interes fotografico</button>
     </div>
     <br>
     <div class="col-md-8">
