--- a/src/app/interes-fotografico/interes-fotografico-create/interes-fotografico-create.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-create/interes-fotografico-create.component.html
@@ -1,3 +1,33 @@
-<p>
-  interes-fotografico-create works!
-</p>
+<div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+        <br>
+        <h2 class="text-center">Crear interes fotografico</h2>
+        <br>
+        <form name="interesFotografico" (ngSubmit)="f.form.valid && createInteresFotografico()" #f="ngForm" novalidate>
+            <div class="form-group">
+                <form name="interesFotografico" (ngSubmit)="f.form.valid && editInteresFotografico()" #f="ngForm" novalidate>
+               <div class="form-group">
+                <label for="interesFotograficoInteres"><b>Nombre</b></label>
+                <input type="text" name="interesFotograficoInteres" class="form-control" id="interesFotograficoInteres" [(ngModel)]="interesFotografico.interes"
+                    #interesFotograficoInteres="ngModel" [ngClass]="{ 'is-invalid': f.submitted &&interesFotograficoInteres.invalid }" required>
+                <div class="invalid-feedback">
+                    <div>No se ha puesto el nombre</div>
+                </div>
+              </div>
+              </form>
+    </div>
+
+
+           
+                   
+            <div class="row form-inline justify-content-center align-self-center">
+                <button type="submit" class="btn btn-primary">Create</button>
+                <div class="divider"></div>
+                <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
+            </div>
+            
+        </form>
+    </div>
+    <div class="col-3"></div>
+</div>
