--- a/src/app/ronda/ronda-edit/ronda-edit.component.html
+++ b/src/app/ronda/ronda-edit/ronda-edit.component.html
@@ -1,28 +1,24 @@
 <div class="row">
-  <div class="col-12">
-      <br>
-      <h2 class="text-center">Editar ronda</h2>
-      <br>
-      <form name="ronda" (ngSubmit)="f.form.valid && editRonda()" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="rondaNumRonda"><b>Numero de Ronda</b></label>
-          <input type="text" name="rondaNumRonda" class="form-control" id="rondaNumRonda" [(ngModel)]="ronda.numRonda"
-              #rondaNumRonda="ngModel" [ngClass]="{ 'is-invalid': f.submitted && rondaNumRonda.invalid }" required>
-          <div class="invalid-feedback">
-              <div>El Numero de Ronda de la ronda falta</div>
+  <div class="col-3"></div>
+  <div class="col-6">
+    <br>
+    <h2 class="text-center">Editar ronda</h2>
+    <br>
+    <form name="ronda" (ngSubmit)="f.form.valid && editRonda()" #f="ngForm" novalidate>
+      <div class="form-group">
+        <label for="rondaNumRonda"><b>Numero de Ronda</b></label>
+        <input type="text" name="rondaNumRonda" class="form-control" id="rondaNumRonda" [(ngModel)]="ronda.numRonda"
+            #rondaNumRonda="ngModel" [ngClass]="{ 'is-invalid': f.submitted && rondaNumRonda.invalid }" required>
+        <div class="invalid-feedback">
+            <div>El Numero de Ronda de la ronda falta</div>
+        </div>
+    </div>
+          <div class="row form-inline justify-content-center align-self-center">
+              <button type="submit" onclick="javascript:window.location.reload();" class="btn btn-primary">Edit</button>
+              <div class="divider"></div>
+              <button type="button" class="btn btn-danger" (click)="cancelEdition()">Cancel</button>
           </div>
-      </div>
       </form>
   </div>
+  <div class="col-3"></div>
 </div>
-<div class="row">
-  <div class="col-12">
-      <div class="row form-inline justify-content-center align-self-center">
-          <button class="btn btn-primary" style="padding-right: 3em; background: rgb(127, 161, 255)" (click)="editRonda()"> <span class="fa fa-save "></span> &nbsp; Guardar</button>
-          &nbsp;
-          <button  class="btn btn-primary" style="padding-right: 3em; background: rgb(250, 84, 84)" (click)="cancelEdition()"> <span class="fa fa-ban"></span> Cancelar</button>
-      </div>
-  </div>
-</div>
-<br>
-<br>
