Asociacion, estetica de factura

--- a/src/app/photo/photo-detail/photo-detail.component.html
+++ b/src/app/photo/photo-detail/photo-detail.component.html
@@ -11,5 +11,6 @@
     <dd>{{photoDetail.price}}</dd>
     <hr>
   </div>
+  <button class="viewbutton" routerLink="/facturas/comprar">Comprar</button>
 </div>
 
