--- a/src/app/factura/factura-create/factura-create.component.html
+++ b/src/app/factura/factura-create/factura-create.component.html
@@ -69,7 +69,7 @@
           </tbody>
         </table>
         <button type="button" class="btn btn-success btn-lg btn-block" (click)="createFactura()">
-          Pay Now   <span class="glyphicon glyphicon-chevron-right"></span>
+          Crear Factura   <span class="glyphicon glyphicon-chevron-right"></span>
         </button>
       </div>
     </div>
