routing de la asociacion

--- a/src/app/factura/factura-detail/factura-detail.component.html
+++ b/src/app/factura/factura-detail/factura-detail.component.html
@@ -74,3 +74,6 @@
             </div>
         </div>
     </div>
+    <!--
+    <factura-photo class="m-3" [idcurso]="facturaDetail.precio"></factura-photo>
+    -->
