--- a/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
+++ b/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
@@ -23,4 +23,6 @@
       </p>
       <button class="btn btn-primary" routerLink="/fotografos/list">Regresar</button>
            
+     
     </div>
+    <app-fotografo-interesfotografico class="m-3" [id]="fotografoDetail.id"></app-fotografo-interesfotografico>
