--- a/src/app/fotografo/fotografo-interesfotografico/fotografo-interesfotografico.component.html
+++ b/src/app/fotografo/fotografo-interesfotografico/fotografo-interesfotografico.component.html
@@ -1,3 +1,26 @@
-<p>
-  fotografo-interesfotografico works!
-</p>
+<div >
+
+    <p>
+  
+      <button type="button" class="btn-primary" (click)="getFotografosInteresesFotograficos()">
+      Mis intereses fotograficos
+    </button>
+  </p>
+  
+  <div id="collapseInteresFotograficos">
+      <table class = "table table-hover">
+         
+          <tbody>
+              
+              <tr *ngFor = "let fdp of intereseFotografico"  class="list-group-item-action">
+              <div>
+
+                <h5 style="cursor: pointer" class="text-center" >{{fdp.interes}}</h5>
+                <hr>
+              </div>
+            </tr>
+          
+        </tbody>
+        </table>
+  </div>
+  </div>
