--- a/src/app/organizador/organizador-detail/organizador-detail.component.html
+++ b/src/app/organizador/organizador-detail/organizador-detail.component.html
@@ -1,6 +1,7 @@
 <div class="panel-body">
   <div class="border margin">
       <p class="h3 p-3">{{organizadorDetail.nombre}}<p> 
+      <img src="{{organizadorDetail.foto}}">
       <div class="row">
           <div class="col">
               <dl>     
