--- a/src/app/concurso/concurso-detail/concurso-detail.component.html
+++ b/src/app/concurso/concurso-detail/concurso-detail.component.html
@@ -3,6 +3,7 @@
     <h1> {{concursoDetail.tema}} </h1>
     <h5> Cantidad del premio: {{concursoDetail.premioCantidad}}</h5>
     <!--      -->
+    <h4 routerLink="/organizadors/{{concursoDetail.organizador.id}}"> Organizador: {{concursoDetail.organizador.nombre}}</h4>
     <div class="row" style="padding-top:50px">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
                 <h4 class="list-group-item"><a href="#" ng-click="show = true" ng-init="show = false">Reglas del concurso</a></h4>
