--- a/src/app/concurso/concurso-create/concurso-create.component.html
+++ b/src/app/concurso/concurso-create/concurso-create.component.html
@@ -44,14 +44,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                        <label for="concursoOrganizador"><b>Organizador:</b></label>
-                        <select class="custom-select" name="concursoOrganizador" id="concursoOrganizador" [(ngModel)]="concurso.organizador.id"
+                        <label for="concursoOrganizador"><b>Organizador</b></label>
+                        <select class="custom-select" name="concursoOrganizador" id="concursoOrganizador" [(ngModel)]="concurso.organizador"
                             #concursoOrganizador="ngModel" [ngClass]="{ 'is-invalid': f.submitted && concursoOrganizador.invalid }"
                             required>
-                            <option [value]="organizador.id" *ngFor="let organizador of organizadors">{{organizador.nombre}}</option>
+                            <option [value]="organizador" *ngFor="let organizador of organizadors">{{organizador.nombre}}</option>
                         </select>
                         <div class="invalid-feedback">
-                            <div>The concursos's organizador is missing</div>
+                            <div>The concurso's organizador is missing</div>
                         </div>
                     </div>
                 <div class="row form-inline justify-content-center align-self-center">
