Corregi un error de autorizacion al crear un concurso

--- a/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
+++ b/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
@@ -22,7 +22,7 @@
         </table>
         <div class="container-fluid" >
           <div *ngIf="selected">
-              <app-forma-de-pago-detail [formaDePagoDetail]="selected" [clienteId] = "clienteId"  ></app-forma-de-pago-detail>
+              <app-forma-de-pago-detail [formaDePagoDetail]="selected"  ></app-forma-de-pago-detail>
             </div>
         </div>
        
