--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class ="nav-item"><a class ="nav-link" id="registroItem" routerLink="/clientes/registro">Sign Up</a></li>  
-                <li class ="nav-item"><a class ="nav-link" id="registroItem" routerLink="/clientes/registro">Log In</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="loginItem" routerLink="/auth/login">Log In</a></li>
             </ul>
 
 
