--- a/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.css
+++ b/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.css
@@ -1,3 +1,10 @@
 i.icon-blue {
     color: rgb(25, 140, 235);
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
