--- a/src/app/forma-de-pago/forma-de-pago-edit/forma-de-pago-edit.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-edit/forma-de-pago-edit.component.html
@@ -1,8 +1,7 @@
 <div class="row">
-  <div class="col-3"></div>
-  <div class="col-6">
+  <div >
       <br>
-      <h2 class="text-center">Agregar Forma De Pago</h2>
+      <h2 class="text-center">Editar Forma De Pago</h2>
       <br>
       <form name="formaDePago" (ngSubmit)="f.form.valid && createFormaDePago()" #f="ngForm" novalidate>
         <div class="form-group">
