--- a/src/app/organizador/organizador-detail/organizador-detail.component.html
+++ b/src/app/organizador/organizador-detail/organizador-detail.component.html
@@ -17,5 +17,15 @@
                 </div>
               </dl>
           </div>
+          <div class="row justify-content-center align-self-center">
+                <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+                    (click)="showHideCreate()">Crear concurso</button>
+            </div>
+            <br>
+            <div class="col-md-8">
+                <div *ngIf="showCreate">
+                    <app-concurso-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-concurso-create>
+                </div>
+            </div>
   </div>
 </div>
